Fix alert sizing and spacing

--- a/assets/css/_alerts.scss
+++ b/assets/css/_alerts.scss
@@ -1,6 +1,6 @@
 div.alert {
   min-height: 70px;
-  font-size: 16px;
+  font-size: 15px;
   font-family: $braze-regular;
   border-radius: 0px;
   -webkit-border-radius: 0;
@@ -22,7 +22,7 @@ div.alert {
   }
   p{
     margin-bottom: 0px !important;
-    line-height: 1.5 !important;
+    line-height: 18px !important;
     padding-left: 0px !important;
   }
   div {
